--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+    "react-google-map-picker": "^1.2.3",
     "react-icons": "^4.8.0",
+    "react-leaflet-location-picker": "^1.4.2",
+    "react-phone-number-input": "^3.2.19",
     "react-router-dom": "^6.9.0",
     "react-scroll": "^1.8.9"
   },
