--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-leaflet-location-picker": "^1.4.2",
     "react-phone-number-input": "^3.2.19",
     "react-router-dom": "^6.9.0",
-    "react-scroll": "^1.8.9"
+    "react-scroll": "^1.8.9",
+    "react-toastify": "^9.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
