--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.26.1",
+    "axios": "^1.3.4",
     "framer-motion": "^10.2.4",
+    "object-2-formdata": "^0.0.4",
+    "object-to-formdata": "^4.4.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
@@ -19,6 +23,7 @@
     "react-phone-number-input": "^3.2.19",
     "react-router-dom": "^6.9.0",
     "react-scroll": "^1.8.9",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.1"
   },
   "devDependencies": {
