--- a/package.json
+++ b/package.json
@@ -9,17 +9,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@boldreports/react-reporting-components": "^4.2.85",
+    "@syncfusion/ej2": "^20.4.54",
+    "@syncfusion/reporting-react": "^4.1.25",
     "@tanstack/react-query": "^4.26.1",
     "axios": "^1.3.4",
+    "create-react-class": "^15.7.0",
     "framer-motion": "^10.2.4",
-    "object-2-formdata": "^0.0.4",
-    "object-to-formdata": "^4.4.2",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.28",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-google-map-picker": "^1.2.3",
     "react-icons": "^4.8.0",
-    "react-leaflet-location-picker": "^1.4.2",
     "react-phone-number-input": "^3.2.19",
     "react-router-dom": "^6.9.0",
     "react-scroll": "^1.8.9",
